[package]
name = "supra-rust-client"
version = "0.1.0"
edition = "2021"
description = "Rust client SDK and CLI for Supra MoveVM testnet"
license = "MIT"

[[bin]]
name = "supra"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[[example]]
name = "oracle_feed"
path = "examples/oracle_feed.rs"

[[example]]
name = "automation"
path = "examples/automation.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
hex = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"
sha3 = "0.10"
anyhow = "1"
dotenvy = "0.15"
bcs = "0.1"
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"
